Update time slots method (#21)
